# smarthome

./: .gitignore
docs/: Bibliografie.md
infrastructure/: README.md  docker-compose.yml  start.sh
infrastructure/rabbitmqconf/: definitions.json
smart-home-backend/: pom.xml
smart-home-backend/common/: pom.xml
smart-home-backend/device_catalog/: pom.xml
smart-home-backend/event-store/: pom.xml
smart-home-backend/home_system_management/: pom.xml
smart-home-backend/identity-and-access/: pom.xml
smart-home-backend/user_profiling/: pom.xml
smart-home-backend/web/: pom.xml
smart-home-frontend/: .eslintrc.js  .eslintrc.json  jsconfig.json  middleware.js  next.config.mjs  package-lock.json  package.json  tailwind.config.js
smart-home-frontend/app/: layout.js  page.js
smart-home-frontend/app/(authenticated)/: layout.js  page.js
smart-home-frontend/app/(authenticated)/catalog/: page.js
smart-home-frontend/app/(authenticated)/devices/: page.js
smart-home-frontend/app/(authenticated)/homesystem-management/: page.js
smart-home-frontend/app/(unauthenticated)/: layout.js
smart-home-frontend/app/(unauthenticated)/activate/: page.jsx
smart-home-frontend/app/(unauthenticated)/forgotpassword/: page.jsx
smart-home-frontend/app/(unauthenticated)/login/: page.jsx
smart-home-frontend/app/(unauthenticated)/logout/: page.jsx
smart-home-frontend/app/(unauthenticated)/signup/: page.jsx
smart-home-frontend/app/activate/: page.jsx
smart-home-frontend/app/admin/deviceconfiguration/: page.js
smart-home-frontend/app/forgotpassword/: page.jsx
smart-home-frontend/app/login/: page.jsx
smart-home-frontend/app/logout/: page.jsx
smart-home-frontend/app/signup/: page.jsx
smart-home-frontend/smarthome/components/: AppDrawer.jsx  Button.jsx  ClickableIcon.jsx  Input.jsx  List.jsx  MenuItemComponent.jsx  MySmartHomeLogo.jsx  MySmartHomeMenu.jsx  PageLayout.jsx  ToolBoxBar.jsx  index.js  menu-items-top.js  menu-items.js
smart-home-frontend/smarthome/features/: index.js
smart-home-frontend/smarthome/lib/: axios.js  errorkeys.js  index.js  sessionMiddleware.js
smart-home-masterdevice/: .clang-format  CMakeLists.txt  example-config-mdframework.yml  main.cpp  main.qrc
smart-home-masterdevice/config/: CMakeLists.txt  ChangelogRunner.cpp  ChangelogRunner.h  DbConnection.cpp  DbConnection.h  HomeSystemApplicationConfig.cpp  HomeSystemApplicationConfig.h  NetworkRequestBuilder.cpp  NetworkRequestBuilder.h
smart-home-masterdevice/config/dto/: ErrorResponse.h
smart-home-masterdevice/deviceaccess/: CMakeLists.txt
smart-home-masterdevice/deviceaccess/domain/: AccessToken.cpp  AccessToken.h  IAccessTokenProvider.h
smart-home-masterdevice/deviceaccess/framework/: SqliteAccessTokenProvider.cpp  SqliteAccessTokenProvider.h
smart-home-masterdevice/features/: CMakeLists.txt
smart-home-masterdevice/features/deviceaccess/: UserLoginComponent.cpp  UserLoginComponent.h
smart-home-masterdevice/features/deviceaccess/application/: UserLoginComponent.cpp  UserLoginComponent.h
smart-home-masterdevice/features/deviceaccess/domain/: IAccessTokenProvider.h
smart-home-masterdevice/features/devicesetup/: DeviceSetupComponent.cpp  DeviceSetupComponent.h
smart-home-masterdevice/features/devicesetup/application/: DeviceSetupComponent.cpp  DeviceSetupComponent.h
smart-home-masterdevice/features/devicesetup/domain/: DeviceSetupConfig.cpp  DeviceSetupConfig.h  IDeviceSetupProvider.h
smart-home-masterdevice/features/navigation/: NavigationComponent.cpp  NavigationComponent.h
smart-home-masterdevice/framework/: CMakeLists.txt
smart-home-masterdevice/framework/deviceaccess/: SqliteAccessTokenProvider.cpp  SqliteAccessTokenProvider.h
smart-home-masterdevice/framework/devicesetup/: SqliteDeviceSetupProvider.cpp  SqliteDeviceSetupProvider.h
smart-home-masterdevice/mapper/: CMakeLists.txt  ErrorResponseMapper.cpp  ErrorResponseMapper.h
smart-home-masterdevice/mdframework/: CMakeLists.txt  Readme.md  install-thirdparty.sh
smart-home-masterdevice/mdframework/include/config/: config_api.h
smart-home-masterdevice/mdframework/include/device/: device_api.h  master_device_data.h
smart-home-masterdevice/mdframework/include/exceptions/: exception.h
smart-home-masterdevice/mdframework/include/session/: session_api.h  session_data.h
smart-home-masterdevice/mdframework/src/config/api/: config_api.cpp
smart-home-masterdevice/mdframework/src/config/locator/: ServiceLocator.h
smart-home-masterdevice/mdframework/src/config/model/: AppConfig.cpp  AppConfig.h
smart-home-masterdevice/mdframework/src/config/service/: AppConfigLoader.cpp  AppConfigLoader.h  ChangelogRunner.cpp  ChangelogRunner.h
smart-home-masterdevice/mdframework/src/device/: Device.h
smart-home-masterdevice/mdframework/src/device/api/: device_api.cpp
smart-home-masterdevice/mdframework/src/device/infrastructure/: DevicesResponse.h  HomeSystemNetworking.cpp  HomeSystemNetworking.h  HomeSystemResponse.h  MasterDeviceRepository.cpp  MasterDeviceRepository.h
smart-home-masterdevice/mdframework/src/device/model/: Device.cpp
smart-home-masterdevice/mdframework/src/device/service/: DeviceSetupService.cpp  DeviceSetupService.h
smart-home-masterdevice/mdframework/src/exceptions/: exception.cpp
smart-home-masterdevice/mdframework/src/session/api/: session_api.cpp
smart-home-masterdevice/mdframework/src/session/infrastructure/: LoginResponse.h  SessionNetworking.cpp  SessionNetworking.h  SessionRepository.cpp  SessionRepository.h
smart-home-masterdevice/mdframework/src/session/model/: User.cpp  User.h
smart-home-masterdevice/mdframework/src/session/service/: SessionService.cpp  SessionService.h
smart-home-masterdevice/resources/: changelogs
smart-home-masterdevice/view/: main.qml
smart-home-masterdevice/view/assets/: assets.qrc
smart-home-masterdevice/view/components/: AppButton.qml  Input.qml  Spinner.qml  components.qrc  input.qml.autosave  qmldir
smart-home-masterdevice/view/pages/: HomePage.qml  LoginPage.qml  SetupPage.qml  pages.qrc  qmldir
staticserver/: pom.xml
(+297 files in other folders)
